--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -7,8 +7,9 @@
     "normalize-scss": "^7.0.1"
   },
   "devDependencies": {
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.11",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -17,11 +18,12 @@
   },
   "scripts": {
     "lint": "stylelint \"./**/*.scss\"",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "build": "node src/scripts/build.js"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint staged "
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
